# ai-agents-sandbox

./: pyproject.toml
01-bare-metal/: agent.py
02-crewai/: crew-aachen.py
02-crewai/tutorial/: app.py  customer_outreach.py  customer_support.py  event_planning.py  financial_analysis.py  job_application.py  research_write_article.py
02-crewai/tutorial/automated_project/: README.md  dashboard.py  final_project_plan.json  pyproject.toml
02-crewai/tutorial/automated_project/src/automated_project/: crew.py  main.py
02-crewai/tutorial/automated_project/src/automated_project/config/: agents.yaml  tasks.yaml
02-crewai/tutorial/instructions/: enterprise_solutions_framework.md  small_business_engagement.md  tech_startups_outreach.md
02-crewai/tutorial/project_progress_report/: README.md  pyproject.toml  sprint_progress_report.md
02-crewai/tutorial/project_progress_report/src/project_progress_report/: crew.py  main.py
02-crewai/tutorial/project_progress_report/src/project_progress_report/config/: agents.yaml  tasks.yaml
02-crewai/tutorial/project_progress_report/src/project_progress_report/tools/: board_data_fetcher.py  card_data_fetcher.py
02-crewai/tutorial/sales_pipeline/: README.md  crewai_flow.html  pyproject.toml
02-crewai/tutorial/sales_pipeline/src/sales_pipeline/: main.py
02-crewai/tutorial/sales_pipeline/src/sales_pipeline/crews/email_engagement/: email_engagement.py
02-crewai/tutorial/sales_pipeline/src/sales_pipeline/crews/email_engagement/config/: agents.yaml  tasks.yaml
02-crewai/tutorial/sales_pipeline/src/sales_pipeline/crews/lead_qualification/: lead_qualification.py
02-crewai/tutorial/sales_pipeline/src/sales_pipeline/crews/lead_qualification/config/: agents.yaml  tasks.yaml
02-crewai/tutorial/sales_pipeline/src/sales_pipeline/tools/: search_tool.py
