[project]
name = "automated_project"
version = "0.1.0"
description = "automated_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.15.4,<2.0.0",
    "ddgs"
]

[project.scripts]
automated_project = "automated_project.main:run"
run_crew = "automated_project.main:run"
train = "automated_project.main:train"
replay = "automated_project.main:replay"
test = "automated_project.main:test"
run_with_trigger = "automated_project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
