[project]
name = "sales_pipeline"
version = "0.1.0"
description = "sales_pipeline using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.15.5,<2.0.0",
    "ddgs>=9.14.4",
]

[project.scripts]
kickoff = "sales_pipeline.main:kickoff"
run_crew = "sales_pipeline.main:kickoff"
plot = "sales_pipeline.main:plot"
run_with_trigger = "sales_pipeline.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
